# grencez.dev

./: .bazelrc  .gitignore  CNAME  MODULE.bazel  WORKSPACE.bazel  _config.yaml  _config.yml  about.md  index.md  robots.txt  sitemap.xml
2008/: index.md
2008/bf-possi-20080705/: index.md
2008/polypow-20080602/: index.md
2014/: gentoo-install-20140305.md  index.md
2015/: getting-by-with-git-20151107.md  index.md  pdfscan-20151104.md  ssh-tutorial-20151107.md  sudoku-20150129.smt2  tok5-20150904.c
2015/82000-digits-20150829/: index.md  search82000.c  search82000.js
2015/spin-checks-agreement-20150407/: agreepair.pml  index.md  spinlive  spinltl  spinsafe
2015/z3-solves-sudoku-20150129/: index.md  sudoku.smt2
2016/: index.md  stow-tutorial-20160505.md
2018/: index.md  ssl-dehydrated-20180812.md
2019/: index.md
2019/circlife-20190310/: index.md  monotonous.smt2  reduction.smt2  unidirectional.smt2
2020/: 0927-minizinc-coursera.md  ffmpeg-merge-video-20201122.md  freshtomato-client-router-20201025.md  git-trunk-20200914.md  index.md  minizinc-coursera-20200927.md  satisfiability-with-decay-20200621.md  steam-linux-20200906.md  webgl-texture-ping-pong-20200607-impl.html  webgl-texture-ping-pong-20200607.md  webrtc-text-chat-20200614-impl.html  webrtc-text-chat-20200614.md
2020/backup-20201018/: backup.sh  index.md
2020/dvorak-grencez-20201022/: dvorak-grencez.xmodmap  index.md
2020/keyboard-layout-20201022/: dvorak-grencez.map  index.md
2020/webgl-texture-ping-pong-20200607/: index.md  main.html  main.js
2020/webrtc-text-chat-20200614/: index.md  main.html  main.js
2021/delicate-bits-of-primes-20210407/: delicatebits.js
2022/: index.md  windows10-install-usb-linux-20220722.md
2022/doas-playbook-20221128/: index.md
2022/dotfiles-20220222/: index.md  tmux_conf.txt  urxvt.txt  vim_colors_grencez.txt  vimrc.txt
2022/fuzzing-selfstabiliz-uniring-20220426/: BUILD.bazel  NonStabilizing_TokenRingFourState.c  NonStabilizing_TokenRingSixState.c  TokenRingDijkstra.c  TokenRingFiveState.c  guess_exhaustive.c  guess_random.cc  index.md  median_guesses.sh  stabilization_fuzz_test.c  uniring_protocol.h
2022/sxproto-20220122/: index.md
2022/zfs-volume-shrink-20221129/: index.md
2023/: index.md
2023/llama-chatbot-20230404/: index.md
2023/podman-dockge-20231126/: index.md
_layouts/: default.html  experiment.html
playbook/: doas.md  git.md  zfs_volume_shrink.md
playbook/zfs/: decrypt.md  grow.md  rollback.md  shrink.md
